25.10 name identifier where AWS